--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^12.0.5",
     "postcss": "^8.5.1",
@@ -33,4 +34,3 @@
     "vite": "^6.0.5"
   }
 }
-
