--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '16'
+        node-version: '18'
 
     # 3. Install dependencies
     - name: Install dependencies
@@ -30,7 +30,7 @@ jobs:
        
     # 5. Deploy to GitHub Pages
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+      uses: JamesIves/github-pages-deploy-action@v4
       with:
-        personal_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./dist
+        branch: gh-pages
+        folder: dist
