--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,9 @@ jobs:
 
     # 3. Install dependencies
     - name: Install dependencies
-      run: npm install
+      run: |
+        cd portfolio
+        npm install
 
     # 4. Build the project 
     - name: Build the project
