--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,9 @@ jobs:
 
     # 4. Build the project 
     - name: Build the project
-      run: npm run build  
+      run: |
+        cd portfolio
+        npm run build  
        
     # 5. Deploy to GitHub Pages
     - name: Deploy to GitHub Pages
